[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wd-mcp"
version = "0.1.0"
description = "Document conversion MCP server with SSE support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "MCP Server", email = "mcp@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "PyPDF2>=3.0.0",
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.6",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "twine>=6.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
wd-mcp = "main:main"

[tool.setuptools]
py-modules = ["main", "document_converter", "sse_manager", "config", "client_example", "test_api"]

[project.urls]
Homepage = "https://github.com/example/wd-mcp"
Repository = "https://github.com/example/wd-mcp.git"
Issues = "https://github.com/example/wd-mcp/issues"
